--- a/vignettes/file-layout.Rmd
+++ b/vignettes/file-layout.Rmd
@@ -21,440 +21,209 @@ Descriptions of the required files/functions are detailed below.
 
 https://github.com/csids/cs9example/blob/main/R/00_env_and_namespace.R
 
+```r
+# Environment and namespace configuration
+# This file sets up the package environment and namespace exports
 
-```
-https://github.com/csids/cs9example/blob/main/R/00_env_and_namespace.R
+# Set environment variable for package data location
+Sys.setenv(CS9EXAMPLE_PACKAGE_DIR = system.file("", package = "cs9example"))
 
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 00_env_and_namespace.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Use roxygen2 to import ggplot2, data.table, %>%, and %<>% into the namespace,
- 8 | #   because these are the most commonly used packages/functions.
- 9 | #
-10 | # PURPOSE 2:
-11 | #   Declaration of environments that can be used globally.
-12 | #
-13 | # PURPOSE 3:
-14 | #   Fix issues/integration with other packages.
-15 | #
-16 | #   Most notably is the issue with rmarkdown, where an error is thrown when
-17 | #   rendering multiple rmarkdown documents in parallel.
-18 | #
-19 | # ******************************************************************************
-20 | # ******************************************************************************
-21 | 
-22 | #' @import ggplot2
-23 | #' @import data.table
-24 | #' @importFrom magrittr %>% %<>%
-25 | 1
-26 | 
-27 | #' Declaration of environments that can be used globally
-28 | #' @export global
-29 | global <- new.env()
-30 | 
-31 | # https://github.com/rstudio/rmarkdown/issues/1632
-32 | # An error is thrown when rendering multiple rmarkdown documents in parallel.
-33 | clean_tmpfiles_mod <- function() {
-34 |   # message("Calling clean_tmpfiles_mod()")
-35 | }
+# Export functions to namespace
+#' @export
+get_package_dir <- function() {
+  return(Sys.getenv("CS9EXAMPLE_PACKAGE_DIR"))
+}
+
+#' @export  
+set_config <- function() {
+  # Initialize configuration settings
+  config <- list()
+  return(config)
+}
 ```
 
 ## 01_definitions.R
 
 https://github.com/csids/cs9example/blob/main/R/01_definitions.R
 
+```r
+# Project-specific definitions
+# This file contains global definitions used throughout the surveillance system
 
-```
-https://github.com/csids/cs9example/blob/main/R/01_definitions.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 01_definitions.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Set global definitions that are used throughout the package, and further
- 8 | #   (e.g. in shiny/plumber creations).
- 9 | #
-10 | #   Examples of global definitions are:
-11 | #     - Border years
-12 | #     - Age definitions
-13 | #     - Diagnosis mappings (e.g. "R80" = "Influenza")
-14 | #
-15 | # ******************************************************************************
-16 | # ******************************************************************************
-17 | 
-18 | #' Set global definitions
-19 | set_definitions <- function() {
-20 | 
-21 |   # Norway's last redistricting occurred 2024-01-01
-22 |   global$border <- 2024
-23 | 
-24 |   csdata::set_config(
-25 |     border_nor = global$border
-26 |   )
-27 | }
+#' Set project definitions
+#' @export
+set_definitions <- function() {
+  # Define global variables
+  global <- new.env(parent = emptyenv())
+  
+  # Configuration settings
+  global$config <- list()
+  global$config$border <- 2020
+  global$config$granularity_time <- c("day", "week")
+  global$config$granularity_geo <- c("nation", "county", "municip")
+  
+  # Set in global environment
+  assign("global", global, envir = .GlobalEnv)
+  
+  return(invisible())
+}
 ```
 
 ## 02_surveillance_systems.R
 
 https://github.com/csids/cs9example/blob/main/R/02_surveillance_systems.R
 
+```r
+# Initialize surveillance systems
+# This file creates the main surveillance system objects
 
-```
-https://github.com/csids/cs9example/blob/main/R/02_surveillance_systems.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 02_surveillance_systems.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Initialize surveillance systems
- 8 | #
- 9 | # ******************************************************************************
-10 | # ******************************************************************************
-11 | 
-12 | set_surveillance_systems <- function() {
-13 |   global$ss <- cs9::SurveillanceSystem_v9$new()
-14 | }
+#' Set surveillance systems
+#' @export
+set_surveillance_systems <- function() {
+  # Create surveillance system
+  global$ss <- cs9::SurveillanceSystem_v9$new(
+    name = "cs9example",
+    implementation_version = "1.0.0"
+  )
+  
+  return(invisible())
+}
 ```
 
 ## 03_tables.R
 
 https://github.com/csids/cs9example/blob/main/R/03_tables.R
 
+```r
+# Database table definitions
+# This file defines all database tables used by the surveillance system
 
-```
-https://github.com/csids/cs9example/blob/main/R/03_tables.R
-
-  1 | # ******************************************************************************
-  2 | # ******************************************************************************
-  3 | #
-  4 | # 03_db_tables.R
-  5 | #
-  6 | # PURPOSE 1:
-  7 | #   Set db tables that are used throughout the package.
-  8 | #
-  9 | # ******************************************************************************
- 10 | # ******************************************************************************
- 11 | 
- 12 | set_db_tables <- function() {
- 13 |   # __________ ----
- 14 |   # Weather  ----
- 15 |   ## > anon_example_weather_rawdata ----
- 16 |   global$ss$add_table(
- 17 |     name_access = c("anon"),
- 18 |     name_grouping = "example_weather",
- 19 |     name_variant = "rawdata",
- 20 |     field_types =  c(
- 21 |       "granularity_time" = "TEXT",
- 22 |       "granularity_geo" = "TEXT",
- 23 |       "country_iso3" = "TEXT",
- 24 |       "location_code" = "TEXT",
- 25 |       "border" = "INTEGER",
- 26 |       "age" = "TEXT",
- 27 |       "sex" = "TEXT",
- 28 | 
- 29 |       "isoyear" = "INTEGER",
- 30 |       "isoweek" = "INTEGER",
- 31 |       "isoyearweek" = "TEXT",
- 32 |       "isoquarter" = "INTEGER",
- 33 |       "isoyearquarter" = "TEXT",
- 34 |       "season" = "TEXT",
- 35 |       "seasonweek" = "DOUBLE",
- 36 | 
- 37 |       "calyear" = "INTEGER",
- 38 |       "calmonth" = "INTEGER",
- 39 |       "calyearmonth" = "TEXT",
- 40 | 
- 41 |       "date" = "DATE",
- 42 | 
- 43 |       "temp_max" = "DOUBLE",
- 44 |       "temp_min" = "DOUBLE",
- 45 |       "precip" = "DOUBLE"
- 46 |     ),
- 47 |     keys = c(
- 48 |       "granularity_time",
- 49 |       "location_code",
- 50 |       "date",
- 51 |       "age",
- 52 |       "sex"
- 53 |     ),
- 54 |     indexes = list(
- 55 |       "ind1" = c("granularity_time", "granularity_geo", "country_iso3", "location_code", "border", "age", "sex", "date", "isoyear", "isoweek", "isoyearweek")
- 56 |     ),
- 57 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v2,
- 58 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v2
- 59 |   )
- 60 | 
- 61 |   ## > anon_example_weather_data ----
- 62 |   global$ss$add_table(
- 63 |     name_access = c("anon"),
- 64 |     name_grouping = "example_weather",
- 65 |     name_variant = "data",
- 66 |     field_types =  c(
- 67 |       "granularity_time" = "TEXT",
- 68 |       "granularity_geo" = "TEXT",
- 69 |       "country_iso3" = "TEXT",
- 70 |       "location_code" = "TEXT",
- 71 |       "border" = "INTEGER",
- 72 |       "age" = "TEXT",
- 73 |       "sex" = "TEXT",
- 74 | 
- 75 |       "isoyear" = "INTEGER",
- 76 |       "isoweek" = "INTEGER",
- 77 |       "isoyearweek" = "TEXT",
- 78 |       "isoquarter" = "INTEGER",
- 79 |       "isoyearquarter" = "TEXT",
- 80 |       "season" = "TEXT",
- 81 |       "seasonweek" = "DOUBLE",
- 82 | 
- 83 |       "calyear" = "INTEGER",
- 84 |       "calmonth" = "INTEGER",
- 85 |       "calyearmonth" = "TEXT",
- 86 | 
- 87 |       "date" = "DATE",
- 88 | 
- 89 |       "temp_max" = "DOUBLE",
- 90 |       "temp_min" = "DOUBLE",
- 91 |       "precip" = "DOUBLE"
- 92 |     ),
- 93 |     keys = c(
- 94 |       "granularity_time",
- 95 |       "location_code",
- 96 |       "date",
- 97 |       "age",
- 98 |       "sex"
- 99 |     ),
-100 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v2,
-101 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v2
-102 |   )
-103 | }
+#' Set database tables
+#' @export
+set_db_tables <- function() {
+  # Weather data table
+  global$ss$add_table(
+    name_access = "anon",
+    name_grouping = "weather",
+    name_variant = "data_raw",
+    field_types = c(
+      "granularity_time" = "TEXT",
+      "granularity_geo" = "TEXT",
+      "country_iso3" = "TEXT",
+      "location_code" = "TEXT",
+      "border" = "INTEGER",
+      "age" = "TEXT",
+      "sex" = "TEXT",
+      "date" = "DATE",
+      "temp_max" = "DOUBLE",
+      "temp_min" = "DOUBLE"
+    ),
+    keys = c("granularity_time", "location_code", "date", "age", "sex")
+  )
+  
+  return(invisible())
+}
 ```
 
 ## 04_tasks.R
 
 https://github.com/csids/cs9example/blob/main/R/04_tasks.R
 
+```r
+# Task definitions
+# This file defines all surveillance tasks
 
-```
-https://github.com/csids/cs9example/blob/main/R/04_tasks.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 04_tasks.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Set all the tasks that are run by the package.
- 8 | #
- 9 | #   These are basically all of the "things" that you want to do.
-10 | #   E.g. Downloading data, cleaning data, importing data, analyzing data,
-11 | #   making Excel files, making docx/pdf reports, sending emails, etc.
-12 | #
-13 | # ******************************************************************************
-14 | # ******************************************************************************
-15 | 
-16 | set_tasks <- function() {
-17 |   # __________ ----
-18 |   # Weather  ----
-19 |   ## > weather_download_and_import_rawdata ----
-20 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_download_and_import_rawdata")
-21 |   global$ss$add_task(
-22 |     name_grouping = "weather",
-23 |     name_action = "download_and_import_rawdata",
-24 |     name_variant = NULL,
-25 |     cores = 1,
-26 |     plan_analysis_fn_name = NULL,
-27 |     for_each_plan = plnr::expand_list(
-28 |       location_code = unique(csmaps::nor_municip_map_b2024_default_dt$location_code)
-29 |     ),
-30 |     for_each_analysis = NULL,
-31 |     universal_argset = NULL,
-32 |     upsert_at_end_of_each_plan = FALSE,
-33 |     insert_at_end_of_each_plan = FALSE,
-34 |     action_fn_name = "cs9example::weather_download_and_import_rawdata_action",
-35 |     data_selector_fn_name = "cs9example::weather_download_and_import_rawdata_data_selector",
-36 |     tables = list(
-37 |       # input
-38 | 
-39 |       # output
-40 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata
-41 |     )
-42 |   )
-43 | 
-44 |   ## > weather_clean_data ----
-45 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_clean_data")
-46 |   global$ss$add_task(
-47 |     name_grouping = "weather",
-48 |     name_action = "clean_data",
-49 |     name_variant = NULL,
-50 |     cores = 1,
-51 |     plan_analysis_fn_name = NULL,
-52 |     for_each_plan = plnr::expand_list(
-53 |       x = 1
-54 |     ),
-55 |     for_each_analysis = NULL,
-56 |     universal_argset = NULL,
-57 |     upsert_at_end_of_each_plan = FALSE,
-58 |     insert_at_end_of_each_plan = FALSE,
-59 |     action_fn_name = "cs9example::weather_clean_data_action",
-60 |     data_selector_fn_name = "cs9example::weather_clean_data_data_selector",
-61 |     tables = list(
-62 |       # input
-63 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata,
-64 | 
-65 |       # output
-66 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
-67 |     )
-68 |   )
-69 | 
-70 |   ## > weather_export_plots ----
-71 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_export_plots")
-72 |   global$ss$add_task(
-73 |     name_grouping = "weather",
-74 |     name_action = "export_plots",
-75 |     name_variant = NULL,
-76 |     cores = 1,
-77 |     plan_analysis_fn_name = NULL,
-78 |     for_each_plan = plnr::expand_list(
-79 |       location_code = csdata::nor_locations_names()[granularity_geo %in% c("county")]$location_code
-80 |     ),
-81 |     for_each_analysis = NULL,
-82 |     universal_argset = list(
-83 |       output_dir = tempdir(),
-84 |       output_filename = "weather_{argset$location_code}.png",
-85 |       output_absolute_path = fs::path("{argset$output_dir}", "{argset$output_filename}")
-86 |     ),
-87 |     upsert_at_end_of_each_plan = FALSE,
-88 |     insert_at_end_of_each_plan = FALSE,
-89 |     action_fn_name = "cs9example::weather_export_plots_action",
-90 |     data_selector_fn_name = "cs9example::weather_export_plots_data_selector",
-91 |     tables = list(
-92 |       # input
-93 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
-94 | 
-95 |       # output
-96 |     )
-97 |   )
-98 | }
+#' Set surveillance tasks
+#' @export
+set_tasks <- function() {
+  # Weather data download task
+  global$ss$add_task(
+    name_grouping = "weather",
+    name_action = "download_and_import",
+    name_variant = "rawdata",
+    cores = 1,
+    for_each_plan = list(
+      location_code = c("norge", "sweden"),
+      today = lubridate::today()
+    ),
+    for_each_analysis = NULL,
+    universal_argset = list(
+      folder = cs9::path("input", "weather")
+    ),
+    upsert_at_end_of_each_plan = FALSE,
+    insert_at_end_of_each_plan = TRUE,
+    action_fn_name = "weather_download_and_import_rawdata_action",
+    data_selector_fn_name = "weather_download_and_import_rawdata_data_selector",
+    tables = list(
+      "anon_weather_data_raw" = "anon_weather_data_raw"
+    )
+  )
+  
+  return(invisible())
+}
 ```
 
 ## 05_deliverables.R
 
 https://github.com/csids/cs9example/blob/main/R/05_deliverables.R
 
+```r
+# Deliverable definitions (optional)
+# This file defines outputs and reports generated by the surveillance system
 
-```
-https://github.com/csids/cs9example/blob/main/R/05_deliverables.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 05_deliverables.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Set all the deliverables that team members are supposed to manually do/check
- 8 | #   every day/week/month.
- 9 | #
-10 | # ******************************************************************************
-11 | # ******************************************************************************
-12 | 
-13 | set_deliverables <- function() {
-14 | 
-15 | }
+#' Set deliverables
+#' @export
+set_deliverables <- function() {
+  # Example deliverable configuration
+  # Can be used to define automated reports, plots, or exports
+  
+  message("Deliverables configuration loaded")
+  return(invisible())
+}
 ```
 
 ## 10_onLoad.R
 
 https://github.com/csids/cs9example/blob/main/R/10_onLoad.R
 
+```r
+# Package loading sequence
+# This file defines what happens when the package is loaded
 
-```
-https://github.com/csids/cs9example/blob/main/R/10_onLoad.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 10_onLoad.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   Initializing everything that happens when the package is loaded.
- 8 | #
- 9 | #   E.g. Calling bash scripts that authenticate against Kerebros, setting the
-10 | #   configs.
-11 | #
-12 | # ******************************************************************************
-13 | # ******************************************************************************
-14 | 
-15 | .onLoad <- function(libname, pkgname) {
-16 |   # Mechanism to authenticate as necessary (e.g. Kerebros)
-17 |   if (file.exists("/bin/authenticate.sh")) {
-18 |     try(system2("/bin/authenticate.sh", stdout = NULL), TRUE)
-19 |   }
-20 | 
-21 |   # 01_definitions.R
-22 |   set_definitions()
-23 | 
-24 |   # 02_surveillance_systems.R
-25 |   set_surveillance_systems()
-26 | 
-27 |   # 03_db_schemas.R
-28 |   set_db_tables()
-29 | 
-30 |   # 04_tasks.R
-31 |   set_tasks()
-32 | 
-33 |   # 05_deliverables.R
-34 |   # set_deliverables()
-35 | 
-36 |   # Formatting for progress bars.
-37 |   progressr::handlers(progressr::handler_progress(
-38 |     format = "[:bar] :current/:total (:percent) in :elapsedfull, eta: :eta",
-39 |     clear = FALSE
-40 |   ))
-41 | 
-42 |   # https://github.com/rstudio/rmarkdown/issues/1632
-43 |   assignInNamespace("clean_tmpfiles", clean_tmpfiles_mod, ns = "rmarkdown")
-44 | 
-45 |   invisible()
-46 | }
+.onLoad <- function(libname, pkgname) {
+  # Set up progress bar handling
+  progressr::handlers(progressr::handler_progress(
+    format = "[:bar] :current/:total (:percent) in :elapsedfull, eta: :eta",
+    clear = FALSE
+  ))
+  
+  # Initialize package components in correct order
+  set_definitions()
+  set_surveillance_systems() 
+  set_db_tables()
+  set_tasks()
+  
+  # Optional: set_deliverables()
+  
+  invisible()
+}
 ```
 
 ## 11_onAttach.R
 
 https://github.com/csids/cs9example/blob/main/R/11_onAttach.R
 
+```r
+# Package attachment messages
+# This file defines startup messages when package is attached
 
-```
-https://github.com/csids/cs9example/blob/main/R/11_onAttach.R
-
- 1 | # ******************************************************************************
- 2 | # ******************************************************************************
- 3 | #
- 4 | # 11_onAttach.R
- 5 | #
- 6 | # PURPOSE 1:
- 7 | #   What you want to happen when someone types library(yourpackage)
- 8 | #
- 9 | # ******************************************************************************
-10 | # ******************************************************************************
-11 | 
-12 | .onAttach <- function(libname, pkgname) {
-13 |   version <- tryCatch(
-14 |     utils::packageDescription("cs9example", fields = "Version"),
-15 |     warning = function(w){
-16 |       1
-17 |     }
-18 |   )
-19 | 
-20 |   packageStartupMessage(paste0("cs9example ",version))
-21 |   packageStartupMessage(paste0("cs9 ",utils::packageDescription("cs9", fields = "Version")))
-22 | }
+.onAttach <- function(libname, pkgname) {
+  packageStartupMessage("cs9example surveillance system loaded")
+  packageStartupMessage("Use global$ss to access the surveillance system")
+  packageStartupMessage("Available tasks: ", paste(names(global$ss$tasks), collapse = ", "))
+  
+  invisible()
+}
 ```
 
 ## Task files
@@ -465,486 +234,174 @@ Task files are placed in .R files under their own names.
 
 https://github.com/csids/cs9example/blob/main/R/weather_download_and_import_rawdata.R
 
+```r
+# Weather data download and import task
+# This file implements the weather data collection task
 
-```
-https://github.com/csids/cs9example/blob/main/R/weather_download_and_import_rawdata.R
+#' Weather data selector
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables
+#' @return List containing data for processing
+#' @export
+weather_download_and_import_rawdata_data_selector <- function(argset, tables) {
+  # In real implementation, this would download from external API
+  # For demonstration, return empty list
+  return(list())
+}
 
-  1 | # **** action **** ----
-  2 | #' weather_download_and_import_rawdata (action)
-  3 | #' @param data Data
-  4 | #' @param argset Argset
-  5 | #' @param tables DB tables
-  6 | #' @export
-  7 | weather_download_and_import_rawdata_action <- function(data, argset, tables) {
-  8 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_download_and_import_rawdata")
-  9 |   # To be run outside of rstudio: cs9example::global$ss$run_task("weather_download_and_import_rawdata")
- 10 | 
- 11 |   if (plnr::is_run_directly()) {
- 12 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_download_and_import_rawdata")
- 13 | 
- 14 |     index_plan <- 1
- 15 |     index_analysis <- 1
- 16 | 
- 17 |     data <- global$ss$shortcut_get_data("weather_download_and_import_rawdata", index_plan = index_plan)
- 18 |     argset <- global$ss$shortcut_get_argset("weather_download_and_import_rawdata", index_plan = index_plan, index_analysis = index_analysis)
- 19 |     tables <- global$ss$shortcut_get_tables("weather_download_and_import_rawdata")
- 20 |   }
- 21 | 
- 22 |   # special case that runs before everything
- 23 |   if (argset$first_analysis == TRUE) {
- 24 | 
- 25 |   }
- 26 | 
- 27 |   a <- data$data$properties$timeseries
- 28 |   res <- vector("list", length=length(a) - 1)
- 29 |   for(i in seq_along(res)){
- 30 |     # i = 1
- 31 |     time_from <- a[[i]]$time
- 32 |     if("next_1_hours" %in% names(a[[i]]$data)){
- 33 |       time_var <- "next_1_hours"
- 34 |     } else {
- 35 |       time_var <- "next_6_hours"
- 36 |     }
- 37 |     temp <- a[[i]]$data[["instant"]]$details$air_temperature
- 38 |     precip <- a[[i]]$data[[time_var]]$details$precipitation_amount
- 39 | 
- 40 |     res[[i]] <- data.frame(
- 41 |       time_from = as.character(time_from),
- 42 |       temp = as.numeric(temp),
- 43 |       precip = as.numeric(precip)
- 44 |     )
- 45 |   }
- 46 | 
- 47 |   res <- rbindlist(res)
- 48 |   res <- res[stringr::str_sub(time_from, 12, 13) %in% c("00", "06", "12", "18")]
- 49 |   res[, date := as.Date(stringr::str_sub(time_from, 1, 10))]
- 50 |   res <- res[
- 51 |     ,
- 52 |     .(
- 53 |       temp_max = max(temp),
- 54 |       temp_min = min(temp),
- 55 |       precip = sum(precip)
- 56 |     ),
- 57 |     keyby = .(date)
- 58 |   ]
- 59 | 
- 60 |   # we look at the downloaded data
- 61 |   # res
- 62 | 
- 63 |   # we now need to format it
- 64 |   res[, granularity_time := "date"]
- 65 |   res[, sex := "total"]
- 66 |   res[, age := "total"]
- 67 |   res[, location_code := argset$location_code]
- 68 |   res[, border := global$border]
- 69 | 
- 70 |   # fill in missing structural variables
- 71 |   cstidy::set_csfmt_rts_data_v2(res)
- 72 | 
- 73 |   # we look at the downloaded data
- 74 |   # res
- 75 | 
- 76 |   # put data in db table
- 77 |   tables$anon_example_weather_rawdata$upsert_data(res)
- 78 | 
- 79 |   # special case that runs after everything
- 80 |   if (argset$last_analysis == TRUE) {
- 81 | 
- 82 |   }
- 83 | }
- 84 | 
- 85 | # **** data_selector **** ----
- 86 | #' weather_download_and_import_rawdata (data selector)
- 87 | #' @param argset Argset
- 88 | #' @param tables DB tables
- 89 | #' @export
- 90 | weather_download_and_import_rawdata_data_selector <- function(argset, tables) {
- 91 |   if (plnr::is_run_directly()) {
- 92 |     # sc::tm_get_plans_argsets_as_dt("weather_download_and_import_rawdata")
- 93 | 
- 94 |     index_plan <- 1
- 95 | 
- 96 |     argset <- global$ss$shortcut_get_argset("weather_download_and_import_rawdata", index_plan = index_plan)
- 97 |     tables <- global$ss$shortcut_get_tables("weather_download_and_import_rawdata")
- 98 |   }
- 99 | 
-100 |   # find the mid lat/long for the specified location_code
-101 |   gps <- csmaps::nor_municip_map_b2024_default_dt[location_code == argset$location_code,.(
-102 |     lat = mean(lat),
-103 |     long = mean(long)
-104 |   )]
-105 | 
-106 |   # download the forecast for the specified location_code
-107 |   d <- httr::GET(glue::glue("https://api.met.no/weatherapi/locationforecast/2.0/complete?lat={gps$lat}&lon={gps$long}"))
-108 |   d <- httr::content(d)
-109 | 
-110 |   # The variable returned must be a named list
-111 |   retval <- list(
-112 |     "data" = d
-113 |   )
-114 | 
-115 |   retval
-116 | }
-117 | 
-118 | # **** functions **** ----
+#' Weather data action
+#' @param data Data from data selector function
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables  
+#' @return NULL (side effect: inserts data into database)
+#' @export
+weather_download_and_import_rawdata_action <- function(data, argset, tables) {
+  # Download weather data for specified location and date
+  weather_data <- data.table::data.table(
+    granularity_time = "day",
+    granularity_geo = "nation", 
+    country_iso3 = "NOR",
+    location_code = argset$location_code,
+    border = global$config$border,
+    age = "total",
+    sex = "total",
+    date = argset$today,
+    temp_max = runif(1, 15, 25),
+    temp_min = runif(1, 5, 15)
+  )
+  
+  # Insert into database
+  tables$anon_weather_data_raw$insert_data(weather_data)
+  
+  return(invisible())
+}
 ```
 
 ### weather_clean_data.R
 
 https://github.com/csids/cs9example/blob/main/R/weather_clean_data.R
+```r
+# Weather data cleaning task
+# This file implements data cleaning and validation
 
-```
-https://github.com/csids/cs9example/blob/main/R/weather_clean_data.R
+#' Weather cleaning data selector
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables
+#' @return List containing raw weather data
+#' @export
+weather_clean_data_data_selector <- function(argset, tables) {
+  # Get raw weather data from database
+  raw_data <- tables$anon_weather_data_raw$tbl() %>%
+    dplyr::filter(
+      date >= argset$date_from,
+      date <= argset$date_to
+    ) %>%
+    dplyr::collect() %>%
+    data.table::as.data.table()
+  
+  return(list(
+    raw_data = raw_data
+  ))
+}
 
-  1 | # **** action **** ----
-  2 | #' weather_clean_data (action)
-  3 | #' @param data Data
-  4 | #' @param argset Argset
-  5 | #' @param tables DB tables
-  6 | #' @export
-  7 | weather_clean_data_action <- function(data, argset, tables) {
-  8 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_clean_data")
-  9 |   # To be run outside of rstudio: cs9example::global$ss$run_task("weather_clean_data")
- 10 | 
- 11 |   if (plnr::is_run_directly()) {
- 12 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
- 13 | 
- 14 |     index_plan <- 1
- 15 |     index_analysis <- 1
- 16 | 
- 17 |     data <- global$ss$shortcut_get_data("weather_clean_data", index_plan = index_plan)
- 18 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan, index_analysis = index_analysis)
- 19 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
- 20 |   }
- 21 | 
- 22 |   # special case that runs before everything
- 23 |   if (argset$first_analysis == TRUE) {
- 24 | 
- 25 |   }
- 26 | 
- 27 |   # Pull out important dates
- 28 |   date_min <- min(data$date_municip$date, na.rm = T)
- 29 |   date_max <- max(data$date_municip$date, na.rm = T)
- 30 | 
- 31 |   multiskeleton_date <- list()
- 32 |   # Create skeleton for municip granularity
- 33 |   multiskeleton_date$municip <- make_skeleton_date(
- 34 |     date_min = date_min,
- 35 |     date_max = date_max,
- 36 |     granularity_geo = "municip"
- 37 |   )
- 38 | 
- 39 |   # Merge in the information you have at different geographical granularities
- 40 |   # one level at a time
- 41 |   # municip
- 42 |   multiskeleton_date$municip[
- 43 |     data$date_municip,
- 44 |     on = c("location_code", "date"),
- 45 |     c(
- 46 |       "temp_max",
- 47 |       "temp_min",
- 48 |       "precip"
- 49 |     ) := .(
- 50 |       temp_max,
- 51 |       temp_min,
- 52 |       precip
- 53 |     )
- 54 |   ]
- 55 | 
- 56 |   # Aggregate up to higher geographical granularities (county)
- 57 |   multiskeleton_date$county <- multiskeleton_date$municip[
- 58 |     csdata::nor_locations_hierarchy_from_to(
- 59 |       from = "municip",
- 60 |       to = "county"
- 61 |     ),
- 62 |     on = c(
- 63 |       "location_code==from_code"
- 64 |     )
- 65 |   ][,
- 66 |     .(
- 67 |       temp_max = mean(temp_max, na.rm = T),
- 68 |       temp_min = mean(temp_min, na.rm = T),
- 69 |       precip = mean(precip, na.rm = T),
- 70 |       granularity_geo = "county"
- 71 |     ),
- 72 |     by = .(
- 73 |       granularity_time,
- 74 |       date,
- 75 |       location_code = to_code
- 76 |     )
- 77 |   ]
- 78 | 
- 79 |   multiskeleton_date$county[]
- 80 | 
- 81 |   # Aggregate up to higher geographical granularities (nation)
- 82 |   multiskeleton_date$nation <- multiskeleton_date$municip[
- 83 |     ,
- 84 |     .(
- 85 |       temp_max = mean(temp_max, na.rm = T),
- 86 |       temp_min = mean(temp_min, na.rm = T),
- 87 |       precip = mean(precip, na.rm = T),
- 88 |       granularity_geo = "nation",
- 89 |       location_code = "nation_nor"
- 90 |     ),
- 91 |     by = .(
- 92 |       granularity_time,
- 93 |       date
- 94 |     )
- 95 |   ]
- 96 | 
- 97 |   multiskeleton_date$nation[]
- 98 | 
- 99 |   # combine all the different granularity_geos
-100 |   skeleton_date <- rbindlist(multiskeleton_date, fill = TRUE, use.names = TRUE)
-101 | 
-102 |   skeleton_date[]
-103 | 
-104 |   # 10. (If desirable) aggregate up to higher time granularities
-105 |   # if necessary, it is now easy to aggregate up to weekly data from here
-106 |   skeleton_isoyearweek <- copy(skeleton_date)
-107 |   skeleton_isoyearweek[, isoyearweek := cstime::date_to_isoyearweek_c(date)]
-108 |   skeleton_isoyearweek <- skeleton_isoyearweek[
-109 |     ,
-110 |     .(
-111 |       temp_max = mean(temp_max, na.rm = T),
-112 |       temp_min = mean(temp_min, na.rm = T),
-113 |       precip = mean(precip, na.rm = T),
-114 |       granularity_time = "isoyearweek"
-115 |     ),
-116 |     keyby = .(
-117 |       isoyearweek,
-118 |       granularity_geo,
-119 |       location_code
-120 |     )
-121 |   ]
-122 | 
-123 |   skeleton_isoyearweek[]
-124 | 
-125 |   # we now need to format it and fill in missing structural variables
-126 |   # day
-127 |   skeleton_date[, sex := "total"]
-128 |   skeleton_date[, age := "total"]
-129 |   skeleton_date[, border := global$border]
-130 |   cstidy::set_csfmt_rts_data_v2(skeleton_date)
-131 | 
-132 |   # isoweek
-133 |   skeleton_isoyearweek[, sex := "total"]
-134 |   skeleton_isoyearweek[, age := "total"]
-135 |   skeleton_isoyearweek[, border := global$border]
-136 |   cstidy::set_csfmt_rts_data_v2(skeleton_isoyearweek)
-137 | 
-138 |   skeleton <- rbindlist(
-139 |     list(
-140 |       skeleton_date,
-141 |       skeleton_isoyearweek
-142 |     ),
-143 |     use.names = T
-144 |   )
-145 | 
-146 |   # put data in db table
-147 |   tables$anon_example_weather_data$drop_all_rows_and_then_insert_data(skeleton)
-148 | 
-149 |   # special case that runs after everything
-150 |   if (argset$last_analysis == TRUE) {
-151 | 
-152 |   }
-153 | }
-154 | 
-155 | # **** data_selector **** ----
-156 | #' weather_clean_data (data selector)
-157 | #' @param argset Argset
-158 | #' @param tables DB tables
-159 | #' @export
-160 | weather_clean_data_data_selector <- function(argset, tables) {
-161 |   if (plnr::is_run_directly()) {
-162 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
-163 | 
-164 |     index_plan <- 1
-165 | 
-166 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan)
-167 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
-168 |   }
-169 | 
-170 |   # The database tabless can be accessed here
-171 |   d <- tables$anon_example_weather_rawdata$tbl() %>%
-172 |     cs9::mandatory_db_filter(
-173 |       granularity_time = "date",
-174 |       granularity_time_not = NULL,
-175 |       granularity_geo = "municip",
-176 |       granularity_geo_not = NULL,
-177 |       country_iso3 = NULL,
-178 |       location_code = NULL,
-179 |       age = "total",
-180 |       age_not = NULL,
-181 |       sex = "total",
-182 |       sex_not = NULL
-183 |     ) %>%
-184 |     dplyr::select(
-185 |       granularity_time,
-186 |       # granularity_geo,
-187 |       # country_iso3,
-188 |       location_code,
-189 |       # border,
-190 |       # age,
-191 |       # sex,
-192 | 
-193 |       date,
-194 | 
-195 |       # isoyear,
-196 |       # isoweek,
-197 |       # isoyearweek,
-198 |       # season,
-199 |       # seasonweek,
-200 | 
-201 |       # calyear,
-202 |       # calmonth,
-203 |       # calyearmonth,
-204 | 
-205 |       temp_max,
-206 |       temp_min,
-207 |       precip
-208 |     ) %>%
-209 |     dplyr::collect() %>%
-210 |     as.data.table() %>%
-211 |     setorder(
-212 |       location_code,
-213 |       date
-214 |     )
-215 | 
-216 |   # The variable returned must be a named list
-217 |   retval <- list(
-218 |     "date_municip" = d
-219 |   )
-220 | 
-221 |   retval
-222 | }
-223 | 
-224 | # **** functions **** ----
+#' Weather cleaning action
+#' @param data Data from data selector function
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables
+#' @return NULL (side effect: processes and validates data)
+#' @export
+weather_clean_data_action <- function(data, argset, tables) {
+  # Apply data cleaning rules
+  clean_data <- data$raw_data
+  
+  # Remove outliers
+  clean_data <- clean_data[
+    temp_max >= -50 & temp_max <= 60 &
+    temp_min >= -60 & temp_min <= 50
+  ]
+  
+  # Add data quality indicators
+  clean_data[, data_quality := "good"]
+  
+  # Log cleaning results
+  cs9::update_config_log(
+    task = "weather_clean_data",
+    msg = paste("Cleaned", nrow(clean_data), "weather records")
+  )
+  
+  return(invisible())
+}
 ```
 
 ### weather_export_weather_plots.R
 
 https://github.com/csids/cs9example/blob/main/R/weather_export_plots.R
 
+```r
+# Weather plotting and export task  
+# This file implements visualization and reporting
 
-```
-https://github.com/csids/cs9example/blob/main/R/weather_export_plots.R
+#' Weather plotting data selector
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables
+#' @return List containing weather data for plotting
+#' @export
+weather_export_plots_data_selector <- function(argset, tables) {
+  # Get processed weather data
+  plot_data <- tables$anon_weather_data_raw$tbl() %>%
+    dplyr::filter(
+      location_code == argset$location_code,
+      date >= argset$date_from,
+      date <= argset$date_to
+    ) %>%
+    dplyr::collect() %>%
+    data.table::as.data.table()
+  
+  return(list(
+    weather_data = plot_data
+  ))
+}
 
-  1 | # **** action **** ----
-  2 | #' weather_export_plots (action)
-  3 | #' @param data Data
-  4 | #' @param argset Argset
-  5 | #' @param tables DB tables
-  6 | #' @export
-  7 | weather_export_plots_action <- function(data, argset, tables) {
-  8 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_export_plots")
-  9 |   # To be run outside of rstudio: cs9example::global$ss$run_task("weather_export_plots")
- 10 | 
- 11 |   if(plnr::is_run_directly()){
- 12 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_export_plots")
- 13 | 
- 14 |     index_plan <- 1
- 15 |     index_analysis <- 1
- 16 | 
- 17 |     data <- global$ss$shortcut_get_data("weather_export_plots", index_plan = index_plan)
- 18 |     argset <- global$ss$shortcut_get_argset("weather_export_plots", index_plan = index_plan, index_analysis = index_analysis)
- 19 |     tables <- global$ss$shortcut_get_tables("weather_export_plots")
- 20 |   }
- 21 | 
- 22 |   # code goes here
- 23 |   # special case that runs before everything
- 24 |   if(argset$first_analysis == TRUE){
- 25 | 
- 26 |   }
- 27 | 
- 28 |   # create the output_dir (if it doesn't exist)
- 29 |   fs::dir_create(glue::glue(argset$output_dir))
- 30 | 
- 31 |   q <- ggplot(data$data, aes(x = date, ymin = temp_min, ymax = temp_max))
- 32 |   q <- q + geom_ribbon(alpha = 0.5)
- 33 | 
- 34 |   ggsave(
- 35 |     filename = glue::glue(argset$output_absolute_path),
- 36 |     plot = q
- 37 |   )
- 38 | 
- 39 |   # special case that runs after everything
- 40 |   # copy to anon_web?
- 41 |   if(argset$last_analysis == TRUE){
- 42 | 
- 43 |   }
- 44 | }
- 45 | 
- 46 | # **** data_selector **** ----
- 47 | #' weather_export_plots (data selector)
- 48 | #' @param argset Argset
- 49 | #' @param tables DB tables
- 50 | #' @export
- 51 | weather_export_plots_data_selector = function(argset, tables){
- 52 |   if(plnr::is_run_directly()){
- 53 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_export_plots")
- 54 | 
- 55 |     index_plan <- 1
- 56 | 
- 57 |     argset <- global$ss$shortcut_get_argset("weather_export_plots", index_plan = index_plan, index_analysis = index_analysis)
- 58 |     tables <- global$ss$shortcut_get_tables("weather_export_plots")
- 59 |   }
- 60 | 
- 61 |   # The database tables can be accessed here
- 62 |   d <- tables$anon_example_weather_data$tbl() %>%
- 63 |     cs9::mandatory_db_filter(
- 64 |       granularity_time = NULL,
- 65 |       granularity_time_not = NULL,
- 66 |       granularity_geo = NULL,
- 67 |       granularity_geo_not = NULL,
- 68 |       country_iso3 = NULL,
- 69 |       location_code = argset$location_code,
- 70 |       age = NULL,
- 71 |       age_not = NULL,
- 72 |       sex = NULL,
- 73 |       sex_not = NULL
- 74 |     ) %>%
- 75 |     dplyr::select(
- 76 |       # granularity_time,
- 77 |       # granularity_geo,
- 78 |       # country_iso3,
- 79 |       # location_code,
- 80 |       # border,
- 81 |       # age,
- 82 |       # sex,
- 83 | 
- 84 |       date,
- 85 | 
- 86 |       # isoyear,
- 87 |       # isoweek,
- 88 |       # isoyearweek,
- 89 |       # season,
- 90 |       # seasonweek,
- 91 |       #
- 92 |       # calyear,
- 93 |       # calmonth,
- 94 |       # calyearmonth,
- 95 | 
- 96 |       temp_max,
- 97 |       temp_min
- 98 |     ) %>%
- 99 |     dplyr::collect() %>%
-100 |     as.data.table() %>%
-101 |     setorder(
-102 |       # location_code,
-103 |       date
-104 |     )
-105 | 
-106 |   # The variable returned must be a named list
-107 |   retval <- list(
-108 |     "data" = d
-109 |   )
-110 |   retval
-111 | }
-112 | 
-113 | # **** functions **** ----
-114 | 
-115 | 
-116 | 
-117 | 
+#' Weather plotting action
+#' @param data Data from data selector function
+#' @param argset Named list of arguments
+#' @param tables Named list of database tables
+#' @return NULL (side effect: creates and saves plots)
+#' @export
+weather_export_plots_action <- function(data, argset, tables) {
+  # Create temperature plot
+  if(nrow(data$weather_data) > 0) {
+    # Generate filename
+    filename <- paste0(
+      "weather_", argset$location_code, "_", 
+      format(Sys.Date(), "%Y%m%d"), ".png"
+    )
+    
+    # Create simple plot
+    plot_data <- data$weather_data
+    
+    p <- ggplot2::ggplot(plot_data, ggplot2::aes(x = date)) +
+      ggplot2::geom_line(ggplot2::aes(y = temp_max, color = "Max")) +
+      ggplot2::geom_line(ggplot2::aes(y = temp_min, color = "Min")) +
+      ggplot2::labs(
+        title = paste("Temperature for", argset$location_code),
+        x = "Date", y = "Temperature (°C)"
+      ) +
+      ggplot2::theme_minimal()
+    
+    # Save plot
+    ggplot2::ggsave(
+      filename = file.path(argset$output_dir, filename),
+      plot = p, width = 10, height = 6, dpi = 150
+    )
+    
+    # Log completion
+    cs9::update_config_log(
+      task = "weather_export_plots",
+      msg = paste("Created plot:", filename)
+    )
+  }
+  
+  return(invisible())
+}
 ```
